# discogs_aio_spider

./: .gitignore  Pipfile  README.md  discogs_details_spider.py  discogs_index_spider.py  discogs_seed_spider.py  main.py  pyproject.toml  requirements.txt
.gitignore/: .gitignore
common/: base_crawler.py
common/.mypy_cache/3.8/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  base64.data.json  base64.meta.json  base_crawler.data.json  base_crawler.meta.json  binascii.data.json  binascii.meta.json  builtins.data.json  builtins.meta.json  cgi.data.json  cgi.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.data.json  contextvars.meta.json  copy.data.json  copy.meta.json  dataclasses.data.json  (+77 more)
config/: __init__.py  config.py  config.toml
db/: mongohelper.py
demo/: __init__.py  async_retrying_test.py  asyncio_debug.py  dataclass_demo.py  decorator_test.py  http_demo.py  server.py
spider/: __init__.py  discogs_details_spider.py  discogs_index_spider.py  discogs_seed_spider.py
test/: test_aiohttp.py  test_pika.py  test_redis.py
test_spider/: __init__.py  detail.py  index.py  seed.py
util/: __init__.py  decorators.py  mongo_helper.py  rabbitmq_helper.py  redis_helper.py  retry_helper.py  singleton.py
(+222 files in other folders)
