[tool.poetry]
name = "discogs_aio_spider"
version = "0.1.0"
description = ""
authors = ["cxapython <1598828268@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.15.4"
aioredis = "^1.3.1"
pydantic = "^1.6.1"
msgpack = "^1.0.0"
aio-pika = "^6.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
