[tool.poetry]
name = "discogs_aio_spider"
version = "0.1.0"
description = ""
authors = ["cxapython <1598828268@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
aioredis = "^1.3.1"
pydantic = "^1.6.1"
msgpack = "^1.0.0"
aio-pika = "^6.7.0"
loguru = "^0.5.3"
toml = "^0.10.1"
motor = "^2.3.0"
aiofiles = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
